chore: Dummy commit to force Netlify rebuild.

--- a/index.html
+++ b/index.html
@@ -278,4 +278,4 @@
                 <button onclick="logOut(); toggleAccountModal(false);" class="mt-4 bg-gray-500 text-white text-sm font-bold py-2 px-4 rounded-lg hover:bg-gray-600 transition">Log Out</button>
             </div>
             <button onclick="toggleAccountModal(false)" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap
+                <svg xmlns="http://www.w3.org/20// This is a dummy change to trigger a Netlify rebuild00/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap
