--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <header class="bg-metro-primary text-white shadow-lg z-30">
         <div class="max-w-7xl mx-auto py-3 px-4 sm:px-6 lg:px-8 flex justify-between items-center">
-            <h1 class="text-2xl font-extrabold tracking-wider">SNTLMO Hub</h1>
+            <h1 class="text-2xl font-extrabold tracking-wider">SNTLMO SportsGrid</h1>
             <div class="flex items-center space-x-4">
                 <div class="hidden sm:flex items-center space-x-3 text-sm font-medium">
                     <span id="user-status-display" class="text-white">Logged Out</span>
@@ -407,28 +407,6 @@
             <button onclick="toggleAdminModal(false)" class="mt-4 bg-gray-500 text-white font-bold py-2 rounded-lg hover:bg-gray-600 transition">Close Admin Panel</button>
         </div>
     </div>
-
-
-    <!-- 📣 NEW: CHEERLEADER UPLOAD MODAL -->
-    <div id="cheerleader-upload-modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50 hidden">
-        <div class="bg-white p-8 rounded-xl shadow-2xl max-w-lg w-full">
-            <h3 class="text-2xl font-bold text-pink-600 mb-4">Become a Cheerleader</h3>
-            <p class="text-gray-700 mb-4">Upload your video/photo cheer and support your favorite player!</p>
-            
-            <div class="space-y-3">
-                <input type="text" id="cheer-player-name" placeholder="Player/Team Name You Are Cheering For" class="w-full p-3 border rounded-lg">
-                <input type="file" id="cheer-media-input" accept="image/*, video/*" class="w-full p-3 border rounded-lg">
-                <textarea id="cheer-caption" rows="2" placeholder="Caption/Message (e.g., Go Vashon Wolverines!)" class="w-full p-3 border rounded-lg"></textarea>
-            </div>
-
-            <button onclick="submitCheerleaderContent()" id="submit-cheer-btn" class="w-full mt-6 bg-pink-500 text-white font-bold py-3 rounded-lg hover:bg-pink-600 transition">
-                Upload & Cheer Now!
-            </button>
-            <button onclick="toggleCheerleaderUploadModal(false)" class="mt-4 text-gray-500 hover:text-gray-700 text-sm block mx-auto">Cancel</button>
-        </div>
-    </div>
-    <!-- 📣 END NEW MODAL -->
-
 
 
     <!-- FINAL SCRIPT BLOCK (Loads QR Code Library and Application Logic) -->
