feat: Final deployment of Cheerleader feature, structural HTML fixes, and application stabilization.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h2 class="text-3xl font-extrabold text-gray-800 mb-4">Access Denied: PRO MEMBERS ONLY</h2>
             <p class="text-lg text-gray-600 mb-6">You need to be a **PRO MEMBER** to access the live data feeds, chat, and locker room.</p>
             
-            <!-- ✅ FIX: ADDED ID, cursor-pointer, position/z-index for clickability -->
+            <!-- ✅ BUTTON FIX: Added ID and explicit styling for clickability -->
             <button id="upgrade-btn" onclick="toggleCashAppModal(true)" 
                     class="bg-metro-accent text-white font-bold py-3 px-8 rounded-full shadow-lg 
                            hover:bg-red-700 transition duration-300 cursor-pointer relative z-10">
