--- a/index.html
+++ b/index.html
@@ -343,11 +343,11 @@
 
     <div id="cashapp-modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50 hidden">
         <div class="bg-white p-8 rounded-xl shadow-2xl max-w-sm w-full text-center">
-            <h3 class="text-2xl font-bold text-metro-primary mb-4">PRO MEMBERSHIP - $10.00</h3>
+            <h3 class="2xl font-bold text-metro-primary mb-4">PRO MEMBERSHIP - $10.00</h3>
             <p class="text-gray-700 mb-4">Please scan the QR code to complete payment via Cash App.</p>
             
             <div id="cashapp-qrcode" class="mx-auto w-[180px] h-[180px] mb-4"></div>
-            <p class="text-lg font-bold text-green-600 mb-2">Cash Tag: $Mac100dime</p>
+            <p class="lg font-bold text-green-600 mb-2">Cash Tag: $Mac100dime</p>
             <p class="text-xs text-red-500 mb-4">After payment, click "Simulate Success" below for instant access.</p>
             <button onclick="simulatePaymentSuccess()" class="w-full bg-green-500 text-white font-bold py-3 rounded-lg hover:bg-green-600 transition mb-3">
                 Simulate Payment Success (Get Access Now)
@@ -423,7 +423,7 @@
             const authBtn = document.getElementById('header-auth-btn'); 
 
             if (overlay && !overlay.classList.contains('hidden')) {
-                console.warn('SECONDARY FAILSAFE: Hiding loading overlay after 800ms.');
+                console.warn('SECONDARY FAILSAFE: Hiding loading overlay after 800ms due to possible app.js module load failure.');
                 overlay.classList.add('hidden');
                 
                 // Show Paywall Content
