--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
-        <script type="module" src="/app.js"></script>
+        <script type="module" src="/app.module.js"></script>
 
 </body>
 </html>
