--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snt.L.Mo. Exclusive Sports Hub</title>
     
-            <script src="/env-config.js"></script> 
+        <script src="/env-config.js"></script> 
     
         <script src="https://cdn.tailwindcss.com"></script>
     
@@ -22,7 +22,8 @@
         .card:hover { transform: translateY(-3px); box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1); }
         .loading-overlay { display: flex; justify-content: center; align-items: center; background-color: rgba(255, 255, 255, 0.8); z-index: 100; }
         
-                #loading-overlay.hidden { 
+        /* ✅ FIX: Ensure loading overlay hides absolutely when class is added */
+        #loading-overlay.hidden { 
             display: none !important; 
         }
 
@@ -60,14 +61,14 @@
 </head>
 <body class="min-h-screen flex flex-col">
 
-        <div id="loading-overlay" class="fixed inset-0 loading-overlay z-50">
+    <div id="loading-overlay" class="fixed inset-0 loading-overlay z-50">
         <div class="text-center">
             <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-metro-primary mx-auto"></div>
             <p class="mt-4 text-gray-700 font-semibold">Initializing Zeus Hub Security...</p>
         </div>
     </div>
 
-            <div id="firebase-init-error-display" class="fixed inset-x-0 top-0 mx-auto max-w-xl mt-4 hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative z-50 shadow-lg">
+        <div id="firebase-init-error-display" class="fixed inset-x-0 top-0 mx-auto max-w-xl mt-4 hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative z-50 shadow-lg">
         <strong class="font-bold">Firebase Initialization Error!</strong>
         <span class="block sm:inline" id="firebase-init-error-text"></span>
         <button onclick="this.parentNode.classList.add('hidden')" class="absolute top-0 right-0 px-2 py-1 text-sm">&times;</button>
@@ -81,8 +82,9 @@
                 <div class="hidden sm:flex items-center space-x-3 text-sm font-medium">
                     <span id="user-status-display" class="text-white">Logged Out</span>
                     <span id="user-id-display" class="font-mono text-xs hidden sm:block"></span>
-                </div><button id="header-auth-btn" class="bg-white text-metro-primary hover:bg-gray-200 px-3 py-1 rounded-full text-sm font-semibold transition">Login/Register</button>
-                                
+                </div>
+                <button id="header-auth-btn" class="bg-white text-metro-primary hover:bg-gray-200 px-3 py-1 rounded-full text-sm font-semibold transition">Login/Register</button>
+                                
                                 <button id="account-btn" class="bg-white text-metro-primary hover:bg-gray-200 px-3 py-1 rounded-full text-sm font-semibold transition hidden">Account</button>
                                 <button id="admin-btn" class="bg-yellow-400 text-gray-900 hover:bg-yellow-500 px-3 py-1 rounded-full text-sm font-bold transition hidden">Admin</button>
             </div>
@@ -99,7 +101,7 @@
             <h2 class="text-3xl font-extrabold text-gray-800 mb-4">Access Denied: PRO MEMBERS ONLY</h2>
             <p class="text-lg text-gray-600 mb-6">You need to be a **PRO MEMBER** to access the live data feeds, chat, and locker room.</p>
             
-                        <button id="upgrade-btn" 
+            <button id="upgrade-btn" 
                     class="bg-metro-accent text-white font-bold py-3 px-8 rounded-full shadow-lg 
                            hover:bg-red-700 transition duration-300 cursor-pointer relative z-10">
                 Upgrade to PRO Membership ($10.00 / Year)
@@ -116,7 +118,7 @@
                 <p id="status-message" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative font-medium"></p>
             </div>
             
-                        <button id="narrator-launch-btn" class="fixed top-20 right-4 z-40 bg-yellow-400 text-gray-900 font-bold py-2 px-4 rounded-full shadow-xl hover:bg-yellow-500 hidden">
+            <button id="narrator-launch-btn" class="fixed top-20 right-4 z-40 bg-yellow-400 text-gray-900 font-bold py-2 px-4 rounded-full shadow-xl hover:bg-yellow-500 hidden">
                 Launch Zeus Tour!
             </button>
             
@@ -134,7 +136,7 @@
                             <h3 class="text-lg font-semibold text-gray-700">Broadcast Live Announcement (TTS)</h3>
                             <textarea id="tts-input" rows="2" class="w-full p-2 border border-gray-300 rounded-md focus:ring-metro-primary focus:border-metro-primary" placeholder="Enter message to broadcast, e.g., 'The Vashon game starts in 5 minutes!'"></textarea>
                             <div class="flex justify-between items-center">
-                                                                <button id="tts-button" disabled>
+                                <button id="tts-button" disabled>
                                     Announce Now!
                                 </button>
                                 <div id="tts-status" class="text-xs font-medium text-gray-500">Status: Requires Gemini API Key</div>
@@ -150,7 +152,7 @@
                     <div id="scoreboard-section" class="bg-white shadow-xl rounded-xl p-6">
                         <h2 class="text-2xl font-bold text-gray-800 border-b pb-3 mb-4 flex justify-between items-center">
                             Community Scoreboard & Highlights
-                                                        <button id="submit-data-modal-btn" class="bg-green-500 text-white font-bold py-1 px-3 rounded-full text-sm hover:bg-green-600 transition">
+                            <button id="submit-data-modal-btn" class="bg-green-500 text-white font-bold py-1 px-3 rounded-full text-sm hover:bg-green-600 transition">
                                 + Submit Data
                             </button>
                         </h2>
@@ -163,7 +165,7 @@
                         <h2 id="interview-heading" class="text-2xl font-bold text-gray-800 border-b pb-3 mb-4">Exclusive Interview Corner</h2>
                         <p class="text-gray-600 mb-4">Submit your questions for our next featured St. Louis athlete!</p>
                         <textarea id="interview-question-input" rows="3" class="w-full p-3 border rounded-lg focus:ring-metro-accent focus:border-metro-accent" placeholder="I'd like to ask..."></textarea>
-                                                <button id="submit-interview-btn" class="mt-3 bg-metro-accent text-white font-bold py-2 px-5 rounded-full hover:bg-metro-accent/90 transition">
+                        <button id="submit-interview-btn" class="mt-3 bg-metro-accent text-white font-bold py-2 px-5 rounded-full hover:bg-metro-accent/90 transition">
                             Submit Question
                         </button>
                     </div>
@@ -192,13 +194,13 @@
                         </div>
                     </div>
                     
-                                        <div id="cheerleader-section" class="bg-white shadow-xl rounded-xl p-6 border-l-4 border-metro-accent">
+                    <div id="cheerleader-section" class="bg-white shadow-xl rounded-xl p-6 border-l-4 border-metro-accent">
                         <h2 class="text-2xl font-bold text-gray-800 border-b pb-3 mb-4 flex justify-between items-center">
                             Cheerleader Squads
-                                                        <button id="cheerleader-upload-btn-trigger" class="bg-pink-500 text-white font-bold py-1 px-3 rounded-full text-sm hover:bg-pink-600 transition">
+                            <button id="cheerleader-upload-btn-trigger" class="bg-pink-500 text-white font-bold py-1 px-3 rounded-full text-sm hover:bg-pink-600 transition">
                                 + Become a Cheerleader
                             </button>
-                        </strong>
+                        </h2>
                         <div id="cheer-squad-display" class="grid grid-cols-1 md:grid-cols-2 gap-4">
                             <p class="text-center text-gray-500 py-8 col-span-full">Loading cheerleader content...</p>
                         </div>
@@ -206,7 +208,7 @@
                                         <div id="locker-room-section" class="bg-white shadow-xl rounded-xl p-6">
                         <h2 id="locker-heading" class="text-2xl font-bold text-gray-800 border-b pb-3 mb-4 flex justify-between items-center">
                             Personal Media Locker
-                                                        <button id="locker-upload-btn" class="bg-blue-500 text-white font-bold py-1 px-3 rounded-full text-sm hover:bg-blue-600 transition" disabled>
+                            <button id="locker-upload-btn" class="bg-blue-500 text-white font-bold py-1 px-3 rounded-full text-sm hover:bg-blue-600 transition" disabled>
                                 Upload Media
                             </button>
                         </h2>
@@ -220,7 +222,7 @@
                     </div>
 
                     <div class="bg-gray-800 text-white rounded-xl p-6 shadow-xl">
-                        <h3 class="xl font-semibold border-b border-gray-600 pb-3 mb-4">System Health & Debug</h3>
+                        <h3 class="text-xl font-semibold border-b border-gray-600 pb-3 mb-4">System Health & Debug</h3>
                         <ul class="space-y-3 text-sm">
                             <li id="debug-firebase-config">Firebase Config: <span class="text-yellow-400">Checking...</span></li>
                             <li id="debug-auth-token">Initial Auth Token: <span class="text-yellow-400">Checking...</span></li>
@@ -252,8 +254,8 @@
 
                     <div class="bg-white shadow-xl rounded-xl p-6 h-96 flex flex-col">
                         <div class="flex justify-around mb-4 border-b pb-2">
-                                                        <button id="mode-active-btn" class="text-sm font-bold p-2 rounded-lg bg-metro-primary text-white transition">Active Users</button>
-                                                        <button id="mode-leaderboard-btn" class="text-sm font-bold p-2 rounded-lg bg-gray-200 text-gray-700 transition">Leaderboard</button>
+                            <button id="mode-active-btn" class="text-sm font-bold p-2 rounded-lg bg-metro-primary text-white transition">Active Users</button>
+                            <button id="mode-leaderboard-btn" class="text-sm font-bold p-2 rounded-lg bg-gray-200 text-gray-700 transition">Leaderboard</button>
                         </div>
                         <div class="flex-grow overflow-y-auto">
                             <div id="active-users-list" class="space-y-1">
