Final cleanup of redundant files and directories in repository root.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snt.L.Mo. Exclusive Sports Hub</title>
     
-        <script src="/env-config.js"></script> 
+        <script src="/create-config.sh"></script> 
     
         <script src="https://cdn.tailwindcss.com"></script>
     
