--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snt.L.Mo. Exclusive Sports Hub</title>
     
-        <script src="/create-config.sh"></script> 
+    <!-- 1. Configuration (MUST LOAD FIRST) -->
+    <!-- FIX: Loading the generated JS config file, not the bash script! -->
+    <script src="/env-config.js"></script> 
     
-        <script src="https://cdn.tailwindcss.com"></script>
+    <!-- 2. CSS Library -->
+    <script src="https://cdn.tailwindcss.com"></script>
     
     <style>
         /* Define a custom color scheme based on St. Louis sports (Metro Blue/Red/Yellow) */
@@ -68,7 +71,8 @@
         </div>
     </div>
 
-        <div id="firebase-init-error-display" class="fixed inset-x-0 top-0 mx-auto max-w-xl mt-4 hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative z-50 shadow-lg">
+    <!-- 🔥 FIX: Firebase Initialization Error Display -->
+    <div id="firebase-init-error-display" class="fixed inset-x-0 top-0 mx-auto max-w-xl mt-4 hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative z-50 shadow-lg">
         <strong class="font-bold">Firebase Initialization Error!</strong>
         <span class="block sm:inline" id="firebase-init-error-text"></span>
         <button onclick="this.parentNode.classList.add('hidden')" class="absolute top-0 right-0 px-2 py-1 text-sm">&times;</button>
@@ -205,7 +209,10 @@
                             <p class="text-center text-gray-500 py-8 col-span-full">Loading cheerleader content...</p>
                         </div>
                     </div>
-                                        <div id="locker-room-section" class="bg-white shadow-xl rounded-xl p-6">
+                    <!-- 📣 END NEW SECTION -->
+
+
+                    <div id="locker-room-section" class="bg-white shadow-xl rounded-xl p-6">
                         <h2 id="locker-heading" class="text-2xl font-bold text-gray-800 border-b pb-3 mb-4 flex justify-between items-center">
                             Personal Media Locker
                             <button id="locker-upload-btn" class="bg-blue-500 text-white font-bold py-1 px-3 rounded-full text-sm hover:bg-blue-600 transition" disabled>
@@ -221,7 +228,7 @@
                             </div>
                     </div>
 
-                    <div class="bg-gray-800 text-white rounded-xl p-6 shadow-xl">
+    <div class="bg-gray-800 text-white rounded-xl p-6 shadow-xl">
                         <h3 class="text-xl font-semibold border-b border-gray-600 pb-3 mb-4">System Health & Debug</h3>
                         <ul class="space-y-3 text-sm">
                             <li id="debug-firebase-config">Firebase Config: <span class="text-yellow-400">Checking...</span></li>
@@ -359,107 +366,4 @@
             <button id="simulate-payment-btn" class="w-full bg-green-500 text-white font-bold py-3 rounded-lg hover:bg-green-600 transition mb-3">
                 Simulate Payment Success (Get Access Now)
             </button>
-            <button id="close-cashapp-modal-btn" class="text-gray-500 hover:text-gray-700 text-sm">Cancel</button>
-        </div>
-    </div>
-    
-    <div id="sports-data-modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50 hidden">
-        <div class="bg-white p-8 rounded-xl shadow-2xl max-w-lg w-full">
-            <h3 class="text-2xl font-bold text-metro-primary mb-4">Submit Sports Data</h3>
-            <p class="text-red-500 text-sm mb-3">Contribution increases your standing on the Leaderboard!</p>
-            
-            <div class="space-y-3">
-                <select id="data-type" class="w-full p-3 border rounded-lg">
-                    <option value="SCORE">Live Score Update</option>
-                    <option value="HIGHLIGHT">Highlight Video/Clip</option>
-                    <option value="ACTIVITY">General Team Activity</option>
-                </select>
-                
-                <select id="data-school" class="w-full p-3 border rounded-lg">
-                    <option value="VASHON">VASHON - Wolverines 🐺</option>
-                    <option value="SUMNER">SUMNER - Bulldogs 🐶</option>
-                    <option value="SOLDAN">SOLDAN - Tigers 🐅</option>
-                    <option value="MCKINLEY">MCKINLEY - Goldbugs 🐞</option>
-                    <option value="ROOSEVELT">ROOSEVELT - Rough Riders 🐎</option>
-                    <option value="OTHER">Other STL Area School</option>
-                </select>
-                
-                <input type="text" id="data-title" placeholder="Title (e.g., Vashon 68 - Soldan 55)" class="w-full p-3 border rounded-lg">
-                <textarea id="data-details" rows="3" placeholder="Details (e.g., 4th quarter score difference)" class="w-full p-3 border rounded-lg"></textarea>
-                <input type="url" id="data-video-url" placeholder="Optional: YouTube/Highlight Video URL" class="w-full p-3 border rounded-lg">
-            </div>
-            
-            <button id="submit-data-btn" class="w-full mt-6 bg-green-500 text-white font-bold py-3 rounded-lg hover:bg-green-600 transition">
-                Submit Data to Scoreboard
-            </button>
-            
-            <button id="close-sports-data-modal-btn" class="mt-4 text-gray-500 hover:text-gray-700 text-sm block mx-auto">Cancel</button>
-            <button onclick="window.upgradeToPremiumForOneYear()" class="text-xs text-red-400 hover:text-red-600 block mx-auto mt-2">ADMIN: Test Upgrade</button>
-        </div>
-    </div>
-
-    <div id="admin-modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50 hidden">
-        <div class="bg-white p-8 rounded-xl shadow-2xl max-w-3xl w-full h-4/5 flex flex-col">
-            <h3 class="text-2xl font-bold text-red-600 mb-4 border-b pb-2">Admin Panel (User Management)</h3>
-            <p class="sm text-gray-600 mb-4">Admin UID: <span class="font-mono text-xs text-red-700">05806734626095127961</span></p>
-
-            <div class="grid grid-cols-5 gap-2 font-bold text-sm text-gray-700 mb-2 border-b-2 pb-2">
-                <div>Nickname</div>
-                <div>UID (Partial)</div>
-                <div>Status</div>
-                <div>Expires</div>
-                <div>Actions</div>
-            </div>
-            
-            <div id="admin-users-list" class="flex-grow overflow-y-auto space-y-1">
-                <p class="text-gray-500 text-center py-4">Loading user list...</p>
-            </div>
-
-            <button id="close-admin-modal-btn" class="mt-4 bg-gray-500 text-white font-bold py-2 rounded-lg hover:bg-gray-600 transition">Close Admin Panel</button>
-        </div>
-    </div>
-
-
-        <div id="cheerleader-upload-modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50 hidden">
-        <div class="bg-white p-8 rounded-xl shadow-2xl max-w-lg w-full">
-            <h3 class="text-2xl font-bold text-pink-600 mb-4">Become a Cheerleader</h3>
-            <p class="text-gray-700 mb-4">Upload your video/photo cheer and support your favorite player!</p>
-            
-            <div class="space-y-3">
-                <input type="text" id="cheer-player-name" placeholder="Player/Team Name You Are Cheering For" class="w-full p-3 border rounded-lg">
-                <input type="file" id="cheer-media-input" accept="image/*, video/*" class="w-full p-3 border rounded-lg">
-                <textarea id="cheer-caption" rows="2" placeholder="Caption/Message (e.g., Go Vashon Wolverines!)" class="w-full p-3 border rounded-lg"></textarea>
-            </div>
-
-            <button id="submit-cheer-btn" class="w-full mt-6 bg-pink-500 text-white font-bold py-3 rounded-lg hover:bg-pink-600 transition">
-                Upload & Cheer Now!
-            </button>
-            <button id="close-cheerleader-upload-modal-btn" class="mt-4 text-gray-500 hover:text-gray-700 text-sm block mx-auto">Cancel</button>
-        </div>
-    </div>
-                <script>
-        // FORCES THE LOADING SCREEN TO HIDE AFTER 150ms IF app.js MODULE CRASHES OR FAILS TO LOAD
-        setTimeout(() => {
-            const overlay = document.getElementById('loading-overlay');
-            const paywall = document.getElementById('paywall-content');
-            const authBtn = document.getElementById('header-auth-btn'); 
-
-            if (overlay && !overlay.classList.contains('hidden')) {
-                console.warn('SECONDARY FAILSAFE: Hiding loading overlay after 150ms due to possible app.js module load failure.');
-                
-                // Directly manipulate styles to ensure visibility changes (Layer 3)
-                if (overlay) overlay.style.display = 'none'; 
-                if (paywall) paywall.style.display = 'flex'; 
-                if (authBtn) authBtn.style.display = 'initial'; // Show login button
-                
-                console.log('✅ Failsafe forced content visibility.');
-            }
-        }, 150); // 150ms timer
-    </script>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-
-        <script type="module" src="/app.module.js"></script>
-
-</body>
-</html>
+            <button id="close-cashapp-modal-btn" class="text-gray-500 hover:text-gray-
