--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snt.L.Mo. Exclusive Sports Hub</title>
     
-    <!-- 1. Configuration (MUST LOAD FIRST) -->
-    <!-- FIX: Loading the generated JS config file, not the bash script! -->
-    <script src="/env-config.js"></script> 
+        <script src="/env-config.js"></script> 
     
-    <!-- 2. CSS Library -->
-    <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://cdn.tailwindcss.com"></script>
     
     <style>
         /* Define a custom color scheme based on St. Louis sports (Metro Blue/Red/Yellow) */
@@ -71,8 +68,7 @@
         </div>
     </div>
 
-    <!-- 🔥 FIX: Firebase Initialization Error Display -->
-    <div id="firebase-init-error-display" class="fixed inset-x-0 top-0 mx-auto max-w-xl mt-4 hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative z-50 shadow-lg">
+        <div id="firebase-init-error-display" class="fixed inset-x-0 top-0 mx-auto max-w-xl mt-4 hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative z-50 shadow-lg">
         <strong class="font-bold">Firebase Initialization Error!</strong>
         <span class="block sm:inline" id="firebase-init-error-text"></span>
         <button onclick="this.parentNode.classList.add('hidden')" class="absolute top-0 right-0 px-2 py-1 text-sm">&times;</button>
@@ -209,10 +205,7 @@
                             <p class="text-center text-gray-500 py-8 col-span-full">Loading cheerleader content...</p>
                         </div>
                     </div>
-                    <!-- 📣 END NEW SECTION -->
-
-
-                    <div id="locker-room-section" class="bg-white shadow-xl rounded-xl p-6">
+                                        <div id="locker-room-section" class="bg-white shadow-xl rounded-xl p-6">
                         <h2 id="locker-heading" class="text-2xl font-bold text-gray-800 border-b pb-3 mb-4 flex justify-between items-center">
                             Personal Media Locker
                             <button id="locker-upload-btn" class="bg-blue-500 text-white font-bold py-1 px-3 rounded-full text-sm hover:bg-blue-600 transition" disabled>
@@ -366,4 +359,6 @@
             <button id="simulate-payment-btn" class="w-full bg-green-500 text-white font-bold py-3 rounded-lg hover:bg-green-600 transition mb-3">
                 Simulate Payment Success (Get Access Now)
             </button>
-            <button id="close-cashapp-modal-btn" class="text-gray-500 hover:text-gray-
+            <button id="close-cashapp-modal-btn" class="text-gray-500 hover:text-gray-700 text-sm">Cancel</button>
+        </div>
+    </div>
