Structural Fix: Final script cleanup and verification of /app.module.js path.

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         </div>
     </div>
 
-    <!-- This new script tag will load your bundled JavaScript -->
-    <script src="dist/bundle.js"></script>
+    <!-- This script tag will load your bundled JavaScript -->
+    <script src="/bundle.js"></script>
 </body>
 </html>
