--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="bg-white rounded-xl shadow-2xl p-8 max-w-md text-center">
             <h2 class="text-3xl font-bold text-metro-primary mb-4">Unlock Zeus Hub</h2>
             <p class="text-gray-600 mb-6">Get exclusive access to premium sports content, predictions, and more!</p>
-            <button id="subscribe-btn" class="w-full bg-metro-primary text-white py-3 rounded-lg font-semibold hover:bg-blue-800 transition">Subscribe Now - $9.99/month</button>
+            <button id="subscribe-btn" class="w-full bg-metro-primary text-white py-3 rounded-lg font-semibold hover:bg-blue-800 transition">Subscribe Now - $10.00/year</button>
             <p class="text-sm text-gray-500 mt-4">Already subscribed? <button id="restore-btn" class="text-metro-primary underline">Restore Purchase</button></p>
         </div>
     </div>
