Add autocomplete attribute to login password field for browser warning fix

--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
                 <hr class="my-4">
                 <h3 class="font-semibold text-metro-primary">Change Password</h3>
                 <div>
-                    <input type="password" id="account-new-password" class="w-full border border-gray-300 rounded-lg p-3 mb-2" placeholder="New Password">
+                    <input type="password" id="login-password" class="w-full border border-gray-300 rounded-lg p-3 mb-4" placeholder="Password" required="" autocomplete="current-password">
+    
                     <p id="account-password-error" class="text-red-500 text-sm mb-2"></p>
                     <button id="update-password-btn" class="w-full bg-metro-accent text-white py-2 rounded-lg font-semibold hover:bg-red-700 transition">Update Password</button>
                 </div>
