--- a/index.html
+++ b/index.html
@@ -170,15 +170,20 @@
                 <p><strong>Status:</strong> <span id="account-premium-status" class="font-semibold"></span></p>
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-1">Nickname</label>
-                    <input type="text" id="account-nickname" class="w-full border border-gray-300 rounded-lg p-3" placeholder="Enter nickname">
+                    <input type="text" id="account-nickname" class="w-full border border-gray-300 rounded-lg p-3" placeholder="Mac10">
                 </div>
                 <hr class="my-4">
                 <h3 class="font-semibold text-metro-primary">Change Password</h3>
-                <div>
-                    <input type="password" id="login-password" class="w-full border border-gray-300 rounded-lg p-3 mb-4" placeholder="Password" required="" autocomplete="current-password">
-    
+                <!-- Wrap in a form for proper semantic HTML and to fix the warning -->
+                <!-- Use a unique ID for the form -->
+                <form id="update-password-form"> 
+                    <!-- FIX: Change id to account-new-password to make it unique and descriptive -->
+                    <!-- Also add autocomplete="new-password" for password managers -->
+                    <input type="password" id="account-new-password" class="w-full border border-gray-300 rounded-lg p-3 mb-2" placeholder="New Password" autocomplete="new-password">
                     <p id="account-password-error" class="text-red-500 text-sm mb-2"></p>
-                    <button id="update-password-btn" class="w-full bg-metro-accent text-white py-2 rounded-lg font-semibold hover:bg-red-700 transition">Update Password</button>
+                    <!-- Change button type to submit as it's within a form -->
+                    <button type="submit" id="update-password-btn" class="w-full bg-metro-accent text-white py-2 rounded-lg font-semibold hover:bg-red-700 transition">Update Password</button>
+                </form>
                 </div>
             </div>
             <button id="close-account-modal-btn" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 text-2xl">&times;</button>
@@ -192,7 +197,7 @@
             <div id="cashapp-qr" class="flex justify-center mb-4">
                 <!-- QR Code will be inserted here -->
             </div>
-            <p class="text-center text-gray-600 mb-4">Scan to pay $9.99</p>
+            <p class="text-center text-gray-600 mb-4">Scan to pay $10.00</p>
             <button id="confirm-payment-btn" class="w-full bg-green-500 text-white py-3 rounded-lg font-semibold hover:bg-green-600 transition">I've Completed Payment</button>
             <button id="close-cashapp-modal" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 text-2xl">&times;</button>
         </div>
