--- a/index.html
+++ b/index.html
@@ -147,6 +147,6 @@
     </audio>
 
     <script src="env-config.js"></script>
-    <script type="module" src="app.module.js"></script>
+    <script type="module" src="bundle.js"></script>
 </body>
 </html>
