--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>:<link href="output.css" rel="stylesheet"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeus Portal</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script 
     <style>
         .hidden { display: none; }
         
