--- a/index.html
+++ b/index.html
@@ -107,18 +107,37 @@
     </div>
 
     <div id="account-modal" class="hidden fixed inset-0 bg-black/90 flex items-center justify-center p-4 z-50">
-        <div class="bg-gray-900 p-8 rounded-lg border border-gray-700 max-w-md w-full">
-            <h2 class="text-2xl font-bold mb-4 text-yellow-500">Account</h2>
-            <p class="text-sm text-gray-400">UID: <span id="account-uid" class="text-white"></span></p>
-            <p class="text-sm text-gray-400 mb-6">Status: <span id="account-premium-status" class="font-bold text-yellow-600"></span></p>
-            <form id="update-password-form" class="space-y-4">
-                <input type="password" id="account-new-password" placeholder="New Password" class="w-full p-2 bg-black border border-gray-700 rounded">
-                <button type="submit" class="w-full bg-gray-700 py-2 rounded font-bold">Update Password</button>
-            </form>
-            <button id="close-account-modal-btn" class="w-full mt-4 text-gray-500 underline text-sm">Close</button>
-        </div>
+    <div class="bg-gray-900 p-8 rounded-lg border border-gray-700 max-w-md w-full shadow-2xl">
+        <h2 class="text-2xl font-bold mb-4 text-yellow-500">Account</h2>
+        <p class="text-sm text-gray-400">UID: <span id="account-uid" class="text-white"></span></p>
+        <p class="text-sm text-gray-400 mb-6">Status: <span id="account-premium-status" class="font-bold text-yellow-600"></span></p>
+        
+        <form id="update-password-form" class="space-y-4">
+            <label class="block text-gray-400 text-xs uppercase mb-1">Update Password</label>
+            <div class="relative w-full">
+                <input 
+                    type="password" 
+                    id="account-new-password" 
+                    placeholder="New Password" 
+                    class="w-full p-2 bg-black border border-gray-700 rounded pr-10 focus:border-yellow-500 outline-none transition-colors text-white"
+                >
+                <button 
+                    type="button" 
+                    id="toggle-password"
+                    class="absolute right-3 top-1/2 -translate-y-1/2 text-gray-500 hover:text-yellow-500 transition-colors"
+                >
+                    <svg id="eye-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.644m17.928.644a1.012 1.012 0 010-.644M12 18.75a6.75 6.75 0 110-13.5 6.75 6.75 0 010 13.5z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                    </svg>
+                </button>
+            </div>
+            <button type="submit" class="w-full bg-yellow-600 py-2 rounded text-black font-bold hover:bg-yellow-500 transition-colors">Update Password</button>
+        </form>
+        
+        <button id="close-account-modal-btn" class="w-full mt-4 text-gray-500 underline text-sm">Close</button>
     </div>
-
+</div>
     <div id="cheerleader-modal" class="hidden fixed inset-0 bg-black/75 flex items-center justify-center z-50 p-4">
         <div class="bg-gray-900 border-2 border-yellow-500 p-6 rounded-lg max-w-md w-full shadow-[0_0_50px_rgba(202,138,4,0.3)]">
             <h2 class="text-2xl font-bold text-yellow-500 mb-4">Add New Cheerleader</h2>
