Final path fix: index and bundle are in the same folder

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="bg-black text-white overflow-x-hidden">
 
-    <div id="loading-overlay" class="fixed inset-0 z-[100] flex items-center justify-center bg-black">
+    <div id="loading-overlay" class="hidden fixed inset-0 z-[100] flex items-center justify-center bg-black">
         <div class="text-center">
             <div class="text-yellow-500 text-2xl animate-pulse font-bold tracking-widest italic">
                 ⚡ CONNECTING TO OLYMPUS...
@@ -91,6 +91,6 @@
         </div>
     </div>
 
-    <script src="dist/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
