fix: stop tracking dist folder and protect keys

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
             <button onclick="toggleAccountModal(false)" class="mt-4 text-gray-500 text-xs uppercase">Close</button>
         </div>
     </div>
+                                      <script src="env-config.js"></script>
 
-    <script src="bundle.js"></script>
+<script src="bundle.js"></script>
 </body>
 </html>
