--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="p-4 border-b border-gray-800 flex justify-between items-center bg-black/50 backdrop-blur-md sticky top-0 z-40">
         <h1 class="text-xl font-black text-yellow-500 tracking-tighter">OLYMPUS</h1>
         <div class="flex gap-4">
-            <button id="header-auth-btn" onclick="toggleLoginModal(true)" class="bg-yellow-500 text-black px-4 py-1 rounded font-bold text-sm">LOGIN</button>
+            <button id="header-auth-btn" class="bg-yellow-500 text-black px-4 py-1 rounded font-bold text-sm">LOGIN</button>
             <button id="account-btn" onclick="toggleAccountModal(true)" class="hidden border border-gray-600 px-4 py-1 rounded font-bold text-sm uppercase">Account</button>
         </div>
     </header>
