--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <script src="env-config.js"></script>
-    <script src="bundle.js"></script>
+    <script src="dist/env-config.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
