FIX: Syncing all root files with new SNT LMO branding

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olympus Sports Grid</title>
+    <title>SntLMoExclusiveSportsGrid</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .hidden { display: none !important; }
@@ -16,13 +16,13 @@
     <div id="loading-overlay" class="fixed inset-0 z-[100] flex items-center justify-center bg-black">
         <div class="text-center">
             <div class="text-yellow-500 text-2xl animate-pulse font-bold tracking-widest italic">
-                ⚡ CONNECTING TO OLYMPUS...
+                ⚡ CONNECTING TO sntlmoexclusivesportsgrid...
             </div>
         </div>
     </div>
 
     <header class="p-4 border-b border-gray-800 flex justify-between items-center bg-black/50 backdrop-blur-md sticky top-0 z-40">
-        <h1 class="text-xl font-black text-yellow-500 tracking-tighter">OLYMPUS</h1>
+        <h1 class="text-xl font-black text-yellow-500 tracking-tighter">SNT LMO EXCLUSIVE SPORTS GRID</h1>
         <div class="flex gap-4">
             <button id="header-auth-btn" class="bg-yellow-500 text-black px-4 py-1 rounded font-bold text-sm">LOGIN</button>
             <button id="account-btn" class="hidden border border-gray-600 px-4 py-1 rounded font-bold text-sm uppercase">Account</button>
