--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
     </div>
 
- <script type="module" src="./dist/bundle.js"></script>
+ <script type="module" src="./bundle.js"></script>
 
 
 </body>
